--- a/quick_trial.ipynb
+++ b/quick_trial.ipynb
@@ -1056,9 +1056,9 @@
     "\n",
     "#### TLDR: \n",
     "```\n",
-    "git clone \"repo\"\n",
-    "cd yelp\n",
-    "conda env create -f environment.yml\n",
+    "git clone git@github.com:kd2718/yelp_getting_started.git\n",
+    "cd yelp_getting_started\n",
+    "conda env create -f environment.yml -n yelp\n",
     "```"
    ]
   },
