--- a/torch.ipynb
+++ b/torch.ipynb
@@ -406,6 +406,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tokenizers import BertWordPieceTokenizer\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_polar = df[df.stars.isin([1,5])]\n",
     "df_polar = df_polar[['text', 'stars']]"
    ]
@@ -5632,7 +5642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
